1.修正语法文件解读错误 2.为LL(k)调整语法树内存模型 3.调整语法树生成代码